@@ -33,14 +33,20 @@
                  [org.clojure/tools.cli "0.3.5"]
                  [environ "1.1.0"]
                  [aero "1.0.0"]
-                 [kixi/kixi.comms "0.1.21"]
+                 [kixi/kixi.comms "0.1.22"]
                  [org.clojure/tools.analyzer "0.6.9"]
                  ;; not really dependency, dep collision https://groups.google.com/forum/#!topic/clojure/D_s9Drua6D4
                  ]
   :plugins [[lein-ring "0.9.7"]]
   :pedantic? true
   :repl-options {:init-ns user}
-  :jvm-opts ["-XX:+HeapDumpOnOutOfMemoryError"]
+  :jvm-opts ["-XX:+HeapDumpOnOutOfMemoryError"
+             "-XX:+UseG1GC"
+             "-Xloggc:gc.log"
+             "-XX:+PrintGCCause"
+             "-XX:+UseGCLogFileRotation"
+             "-XX:NumberOfGCLogFiles=3"
+             "-XX:GCLogFileSize=2M"]
   :profiles
   {:uberjar {:aot [kixi.heimdall.bootstrap]
              :main kixi.heimdall.bootstrap
@@ -50,4 +56,4 @@
                         [ring/ring-mock "0.3.0"]
                         [org.clojure/data.json "0.2.6"]]}}
   :aliases {"seed" ["run" "-m" "joplin.alias/seed" "joplin.edn"],
-           ,"migrate" ["run" "-m" "joplin.alias/migrate" "joplin.edn"]})
+            ,"migrate" ["run" "-m" "joplin.alias/migrate" "joplin.edn"]})
